# cotoha_api

./: README.md
go/: main.go
go/cotoha/: cotoha.go
nim/: class.nim  compile.sh  cotoha.nim  main.nim
php/: cotoha.php  main.php
python/: cotoha.py  main.py
ruby/: cotoha.rb  main.rb
rust/: Cargo.toml
rust/src/: cotoha.rs  main.rs
sh/: cotoha.sh
v/: main.v
v/cotoha/: cotoha.v
