[package]
name = "rust"
version = "0.1.0"
authors = ["root"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "*", features = ["json"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
debug-assertions = false
lto = "on"